--- a/index.html
+++ b/index.html
@@ -3,8 +3,109 @@
 <head>
     <meta charset="UTF-8">
     <title>Gyüjtemények</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
+<body class="bg-light p-4">
+
+<div class="container">
+    <h1 class="mb-4">Gyűjtemények</h1>
+    <button class="btn btn-primary mb-3" data-bs-toggle = "modal" data-bs-target = #createModal>Új gyűjtemény létrehozása</button>
+
+    <h2 class="mb-3">Meglévő gyűjtemények</h2>
+    <div id="lista"></div>
+
+    <!-- Létrehozás Modal -->
+    <div class="modal fade" id="createModal" tabindex="-1" aria-labelledby="createModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="createModalLabel">Új gyűjtemény létrehozása</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Bezárás"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="mb-3">
+                        <label for="cim" class="form-label">Cím</label>
+                        <input type="text" class="form-control" id="cim" placeholder="Pl. Könyvek">
+                    </div>
+                    <div class="mb-3">
+                        <label for="tema" class="form-label">Témakör</label>
+                        <input type="text" class="form-control" id="tema" placeholder="Pl. Tudomány">
+                    </div>
+                    <div class="mb-3">
+                        <label for="datum" class="form-label">Dátum</label>
+                        <input type="date" class="form-control" id="datum">
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-success" id="letrehoz">Létrehozás</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+<!-- Átnevezés Modal -->
+    <div class="modal fade" id="renameModal" tabindex="-1" aria-labelledby="renameModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="renameModalLabel">Átnevezése</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Bezárás"></button>
+                </div>
+                <div class="modal-body">
+                    <label for="atnevezesInput" class="form-label">Új cím</label>
+                    <input type="text" id="atnevezesInput" class="form-control" placeholder="Új cím">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" id="mentesAtnevezes">Mentés</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Új elem hozzáadása Modal -->
+<div class="modal fade" id="elemModal" tabindex="-1" aria-labelledby="elemModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="elemModalLabel">Új elem hozzáadása</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Bezárás"></button>
+            </div>
+            <div class="modal-body">
+                <label for="elemCim" class="form-label">Elem címe</label>
+                <input type="text" class="form-control" id="elemCim" placeholder="Elem címe">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-success" id="mentesElem">Hozzáadás</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Áthelyezés Modal -->
+<div class="modal fade" id="transferModal" tabindex="-1" aria-labelledby="transferModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="transferModalLabel">Elem áthelyezése</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Bezárás"></button>
+            </div>
+            <div class="modal-body">
+                <label for="celGyujtemeny">Válaszd ki a cél gyűjteményt:</label>
+                <select class="form-select" id="celGyujtemeny">
+                </select>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" id="modalAthelyezesGomb">Áthelyezés</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+<script src = "script.js" ></script>
 
 </body>
 </html>
